# vulkan_rtx_ray_tracer

./: .gitignore  CMakeLists.txt  Makefile  VulkanTest  ]  compile.sh  compile_commands.json  main.cpp  possible_todo.md
headers/: constants.h  extension_functions.h  options.h  ray_tracer.h  ui_options.h  vertex.h
shaders/: ao_helpers.h  raytrace.rchit  raytrace.rgen  raytrace.rmiss  shader.frag  shader.vert
sources/: asset_utilities.cpp  create_functions.cpp  extension_functions.cpp  lib_impl.cpp  main.cpp  options.cpp  options.ui  ray_tracer.cpp  setup_utilities.cpp  vertex.cpp  vulkan_utilities.cpp
